package es.etg.daw.programacio.practica.mercadaw;

public class Encargado extends Empleado{
    public static final double SUELDO = 1500;

    public Encargado(String nombre, String apellidos, String seccion) {
        super(nombre, apellidos, seccion, SUELDO);

    }

    
}
