package es.etg.daw.programacio.practica.mercadaw.Utilidades;

public interface IImprimible {
    public String imprimir();
}
